--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
@@ -37,7 +38,7 @@
                 <article class="info">
                     <ul class="inT">
                         <li>
-                            <em>NAME : </em><br>
+                            <em>TITRE : </em><br>
                             <i>Monochrome bleu</i>
                         </li>
                         <li>
@@ -69,7 +70,7 @@
                 <article class="info">
                     <ul class="inT">
                         <li>
-                            <em>NAME : </em><br>
+                            <em>TITRE : </em><br>
                             <i>"The Heartbeat of France"</i>
                         </li>
                         <li>
@@ -96,7 +97,7 @@
                 <article class="info">
                     <ul class="inT">
                         <li>
-                            <em>NAME : </em><br>
+                            <em>TITRE : </em><br>
                             <i>Peinture de Feu sans titre</i>
                         </li>
                         <li>
@@ -127,7 +128,7 @@
                 <article class="info">
                     <ul class="inT">
                         <li>
-                            <em>NAME : </em><br>
+                            <em>TITRE : </em><br>
                             <i>Les éléments et les couleurs</i>
                         </li>
                         <li>
@@ -165,7 +166,7 @@
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
                     <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
-                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
+                    <div class="menu menu4"><a href="exposition.html">EXPOSITIONS</a></div>
                     <div class="menu menu4"><a href="index.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
