--- a/001.HTML/012.Blue_PJ/crtist.html
+++ b/001.HTML/012.Blue_PJ/crtist.html
@@ -6,8 +6,11 @@
     <title>KLEIN BLUE : ARTICLE</title>
     <link rel="shortcut icon" href="images/jump.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/common.css">
-    <script src="JS/main.js"></script>
+    <link rel="stylesheet" href="css/crtist.css">
+    
 </head>
 <body>
     <div class="wrapBox">
@@ -19,6 +22,7 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
@@ -30,8 +34,91 @@
         </header>
         <main class="article">
             <article class="info">
-                
+                <div class="title">
+                    <div class="titleBox">
+                        <h1 class="tit">Dimanche 27 novembre 1960 "Le journal d'un seul jour"</h1>
+                        <p class="txt">"En présentant le dimanche 27 novembre 1960, de 0 heure à 24 heures,<br>
+                            je présente donc une journée de fête, un véritable spectacle du vide, au point culminant de mes théories.<br>
+                            Cependant, n’importe quel autre jour de la semaine aurait pu être utilisé. (...) le théâtre des opérations de cette conception du théâtre que je propose n’est pas seulement la ville, Paris, mais aussi la campagne, le désert, la montagne, le ciel même, et tout l’univers même, pourquoi pas ?"<br>
+                            Yves Klein, extrait de Dimanche 27 novembre 1960 Le journal d'un seul jour, 1960<br><br>
+                            Ce « journal » de quatre pages, imprimé par Combat et Presse de France réunis, à l’occasion du troisième Festival d’Art d’avant-garde organisé par Jacques Polieri et Michel Ragon, est un pastiche du vrai Journal du dimanche. Tout a été entièrement conçu par l’artiste : titres, caractères, mise en page. Le dimanche 27 novembre 1960, Yves Klein fait distribuer dans les kiosques parisiens Le journal d'un seul jour.<br><br>
+                            L'artiste s'empare de ce dimanche pour présenter "une ultime forme de théâtre collectif".</p>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="images/mli3.jpeg" alt="슬라이드 이미지"></div>
+                            <div class="swiper-slide"><img src="images/news2.jpeg" alt="슬라이드 이미지"></div>
+                            <div class="swiper-slide"><img src="images/news3.jpeg" alt="슬라이드 이미지"></div>
+                            <div class="swiper-slide"><img src="images/news4.jpeg" alt="슬라이드 이미지"></div>
+                            <div class="swiper-slide"><img src="images/jump.jpeg" alt="슬라이드 이미지"></div>
+                            <div class="swiper-slide"><img src="images/newspaper.jpeg" alt="슬라이드 이미지"></div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                </div>
             </article>
+            <div class="scrip">
+                <h2>Le Saut dans le vide</h2>
+                <p>
+                    Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960 Le journal d'un seul jour, est : « Un homme dans l'espace ! Le peintre de l'espace se jette dans le vide ! ».<br><br>
+                    La photographie est accompagnée du texte suivant :<br>
+                    "Le monochrome qui est aussi champion de judo, ceinture noire 4e dan, s’entraîne régulièrement à la lévitation dynamique ! (avec ou sans filet, au risque de sa vie).
+                    Il prétend être en mesure d’aller rejoindre bientôt dans l’espace son œuvre préférée : une sculpture aérostatique composée de Mille et un Ballons bleus, qui, en 1957, s’enfuit de son exposition dans le ciel de Saint-Germain-des-Prés pour ne plus jamais revenir !
+                    Libérer la sculpture du socle a été longtemps sa préoccupation. « Aujourd’hui le peintre de l’espace doit aller effectivement dans l’espace pour peindre, mais il doit y aller sans trucs, ni supercheries, ni non plus en avion, ni en parachute ou en fusée : il doit y aller par lui-même, avec une force individuelle autonome, en un mot, il doit être capable de léviter. »<br>
+                    Yves :<br>
+                    « Je suis le peintre de l’espace. Je ne suis pas un peintre abstrait, mais au contraire un figuratif, et un réaliste. Soyons honnêtes, pour peindre l’espace, je me dois de me rendre sur place, dans cet espace même. »
+                    Yves Klein, extrait de Dimanche 27 novembre 1960 Le journal d'un seul jour, 1960<br><br>
+                    Yves Klein considère que l'espace est son domaine et qu'il peut s'y rendre par la seule force de l'esprit.<br><br>
+                    Le saut a lieu le 19 octobre 1960 à Fontenay-aux-Roses, dans une rue où un club de judo l'avait souvent accueilli.
+                    Yves Klein s'élance d'un pilier situé à l'entrée d'un pavillon, le visage tourné vers le ciel, les bras en croix. Loin de tomber, l'artiste semble prendre son envol.<br><br>
+                    Soucieux, comme d’habitude, de garder trace de ses actes, il a convié, pour immortaliser le geste, ses deux photographes favoris : John Kender et Harry Shunk. Ce sont eux qui réaliseront dans leur laboratoire parisien ce photomontage publié pour la première fois à la « une » du journal créé par Yves Klein "Dimanche, le journal d’un seul jour", que les Parisiens trouveront dans les kiosques , le 27 novembre 1960.<br><br>
+                    La rue est déserte, à part, au fond, à droite de la photo, un cycliste de dos qui vient de passer. Un homme en pleine lévitation entre ciel et terre ne l’a fait ni s’arrêter ni se retourner ; il continue son chemin, indifférent à cet acte qui, pourtant, nous semble insolite, voire déconcertant. Un témoignage recueilli auprès de Harry Shunk par Sidra Stich nous apprend que le cycliste était le photographe John Kender et que l’idée de l’inclure dans la photo serait venue de Harry Shunk lui-même.
+                </p>
+            </div>
+
+            <article class="info scd">
+                <div class="title">
+                    <div class="titleBox">
+                        <h1 class="tit">Writings on Monotone-Silence Symphony</h1>
+                        <p class="txt">
+                            "During this period of concentration, I created, around 1947–1948, a monotone symphony whose theme expresses what I wished my life to be. This symphony of forty minutes duration (although that is of no importance, as one will see) consisted of one unique continuous sound, drawn out and deprived of its beginning and of its end, creating a feeling of vertigo and of aspiration outside of time. Thus even in its presence, this symphony does not exist. It exists outside of the phenomenology of time because it is neither born nor will it die, after existence. However, in the world of our possibilities of conscious perception, it is silence – audible presence."<br>
+                            Yves Klein, excerpt from « Overcoming the problematics of Art », 1959<br><br>
+                            "Silence … This is really my symphony and not the sounds during its performance. This silence is so marvelous because it grants happenstance and even sometimes the possibility of true happiness, if only for only a moment, for a moment whose duration is immeasurable."
+                            Yves Klein, excerpt from « Truth becomes Reality », 1960
+                        </p>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide"><img src="images/Symphony1.jpeg" alt="슬라이드 이미지"></div>
+                          <div class="swiper-slide"><img src="images/symphony2.jpeg" alt="슬라이드 이미지"></div>
+                          <div class="swiper-slide"><img src="images/exit.jpeg" alt="슬라이드 이미지"></div>
+                          <div class="swiper-slide"><img src="images/symphony4.jpeg" alt="슬라이드 이미지"></div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                </div>
+            </article>
+            <div class="scrip">
+                <h2>Yves Klein, chef d'orchestre à Gelsenkirchen</h2>
+                <p>
+                    Cette composition est divisée en deux volets. Tout d'abord un son unique, continu, puis un temps équivalent de silence, la partie sonore préparant l'auditeur à transformer l'expérience du silence en plénitude. Ce diptyque est l'exacte transposition de l'articulation entre le visible et l'invisible. La monotonie est l'équivalence conceptuelle et sonore de la monochromie picturale.<br><br>
+                    "Pendant cette période de condensation, je crée vers 1947- 1948 une symphonie «monoton» dont le thème est ce que je voulais que soit ma vie. Cette symphonie d’une durée de quarante minutes (mais cela n’a pas d’importance, on va voir pourquoi) est constituée d’un seul et unique « son » continu, étiré, privé de son attaque et de sa fin, ce qui crée une sensation de vertige, d’aspiration de la sensibilité hors du temps. Cette symphonie n’existe donc pas tout en étant là, sortant de la phénoménologie du temps, parce qu’elle n’est jamais née ni morte, après existence, cependant, dans le monde de nos possibilités de perception conscientes : c’est du silence – présence audible."<br>
+                    Yves Klein, extrait de "Le dépassement de la problématique de l'art", 1959, Le dépassement de la problématique de l'art et autres écrits, Beaux-Arts de Paris, 2003<br><br>
+                    " La symphonie à l’origine durait quarante minutes. [rires] Elle était aussi longue justement pour montrer le désir de vaincre le temps. L’attaque et la fin de ce son avaient été coupées, ce qui provoquait une sorte de phénomène sonore étrange aspirant la sensibilité. En effet, n’ayant ni commencement, ni fin, même imperceptibles, cette symphonie sortait de la phénoménologie du temps, devenait extérieure au passé, au présent, au futur, puisqu’elle n’était jamais née ni morte en somme, après existence cependant dans la réalité sonore physique."<br>
+                    Yves Klein, extrait de "Conférence de la Sorbonne », 3 juin 1959, Le dépassement de la problématique de l'art et autres écrits, Beaux-Arts de Paris, 2003<br>
+                    "Un joueur de flûte se mit un jour à ne plus jouer qu’un seul et unique son continu. Continuant cette action pendant plus de vingt ans, sa femme s’avisa de lui faire observer que les autres joueurs de flûte, eux, émettaient plusieurs sons harmonieux, mélodieux, etc., et que tout de même c’était peut-être plus intéressant et plus varié. Ce à quoi le joueur de flûte «monoton» répondit que ce n’était pas de sa faute, si «lui» avait trouvé la note que les autres étaient tous encore en train de chercher !" Yves Klein, extrait de "L’aventure monochrome : l’épopée monochrome", 1960, Le dépassement de la problématique de l'art et autres écrits, Beaux-Arts de Paris, 2003<br><br>
+                    "Le silence... C’est cela même ma symphonie, et non le son lui-même, d’avant-pendant l’exécution. C’est ce silence si merveilleux qui donne la « chance » et qui donne même parfois la possibilité d’être vraiment heureux, ne serait-ce qu’un seul instant, pendant un instant incommensurable en durée."<br>
+                    Yves Klein, extrait de "Le vrai devient réalité", 1960, Le dépassement de la problématique de l'art et autres écrits, Beaux-Arts de Paris, 2003
+                </p>
+            </div>
         </main>
 
         <footer class="footer">
@@ -47,7 +134,7 @@
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
                     <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
-                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
+                    <div class="menu menu4"><a href="exposition.html">EXPOSITIONS</a></div>
                     <div class="menu menu4"><a href="index.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
@@ -70,5 +157,6 @@
             </div>
         </footer>
     </div>
+    <script src="JS/main.js"></script>
 </body>
 </html>
