--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -24,12 +24,13 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="#">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <img src="images/mbt3.jpeg" alt="Yves Klein">
+                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
                 </div>
             </nav>
         </header>
@@ -86,7 +87,7 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-pagination"></div>
-            <div class="more"><span><a href="#">view more</a></span></div>
+            <div class="more"><span><a href="exposition.html">view more</a></span></div>
         </section>
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
@@ -121,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="more"><span><a href="#">view more</a></span></div>
+            <div class="more"><span><a href="crtist.html">view more</a></span></div>
         </section>
         <!------------------------------------------------- footer ------------------------------------------------->
         <footer class="footer">
@@ -137,7 +138,7 @@
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
                     <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
-                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
+                    <div class="menu menu4"><a href="#">EXPOSITIONS</a></div>
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
