--- a/001.HTML/012.Blue_PJ/exposition.html
+++ b/001.HTML/012.Blue_PJ/exposition.html
@@ -78,9 +78,9 @@
                     <div class="snsWrap">
                         <div class="snsTit">FOLLOW US</div>
                         <div class="sns">
-                            <div class="insta"><a href="#">instagram</a></div>
-                            <div class="faceb"><a href="#">facebook</a></div>
-                            <div class="yutub"><a href="#">youtube</a></div>
+                            <div class="insta"><a href="#"><i><img src="images/insta.png" alt="인스타그램"></i></a></div>
+                            <div class="faceb"><a href="#"><i><img src="images/face.png" alt="페이스북"></i></a></div>
+                            <div class="yutub"><a href="#"><i><img src="images/you.png" alt="유튜브"></i></a></div>
                         </div>
                     </div>
                 </div>
