--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -80,7 +80,6 @@
                   <div class="swiper-slide"><img src="images/cont2bg3.png" alt="이미지3번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg4.png" alt="이미지4번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg5.jpeg" alt="이미지5번"></div>
-                  <div class="swiper-slide"><img src="images/cont2bg6.jpeg" alt="이미지6번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg7.jpeg" alt="이미지7번"></div>
                   <div class="swiper-slide"><img src="images/cont2bg8.jpeg" alt="이미지8번"></div>
                 </div>
@@ -93,17 +92,19 @@
         <!------------------------------------------------- cont3 ------------------------------------------------->
         <section class="cont cont3">
             <div class="c3boxL">
-                <div class="c3titL">
-                    <div class="tWrap">
-                        <h4>Le Saut dans le vide!</h4>
-                        <p>
-                            Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960<br>
-                            Le journal d'un seul jour, est :<br>
-                            « Un homme dans l'espace ! Le peintre de l'espace se jette dans le vide ! ».
-                        </p>
+                    <div class="c3titL">
+                        <div class="tWrap">
+                            <h4>Le Saut dans le vide!</h4>
+                            <p>
+                                Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960<br>
+                                Le journal d'un seul jour, est :<br>
+                                « Un homme dans l'espace ! Le peintre de l'espace se jette dans le vide ! ».
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="c3imgbxL"><div class="c3imgL"></div></div>
+                    <div class="c3imgbxL">
+                        <div class="c3imgL"></div>
+                                </div>
             </div>
             <div class="c3boxR">
                 <div class="c3imgbxR"><div class="c3imgR"></div></div>
@@ -121,6 +122,43 @@
                             Yves Klein fait distribuer dans les kiosques parisiens Le journal d'un seul jour.
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="more"><span><a href="crtist.html">view more</a></span></div>
+        </section>
+        <!------------------------------------ 모바일용 cont3 ------------------------------------>
+        <section class="cont cont3_M">
+            <div class="c3boxL_M">
+                    <div class="tWrap_M">
+                        <h4>Le Saut dans le vide!</h4>
+                        <p>
+                            Le titre de cette œuvre photographique d'Yves Klein parue dans son journal Dimanche 27 novembre 1960<br>
+                            Le journal d'un seul jour, est :<br>
+                            « Un homme dans l'espace ! Le peintre de l'espace se jette dans le vide ! ».
+                        </p>
+                    </div>
+                <div class="c3imgbxL_M">
+                    <div class="c3imgL_M"></div>
+                </div>
+            </div>
+            <div class="c3boxR_M">
+                <div class="c3titR_M">
+                    <div class="tWrap_M">
+                        <h4>
+                            Publication de<br>
+                                "Dimanche 27 novembre, le journal d'un seul jour",<br>
+                                manifestation artistique d'Yves Klein dans le cadre du Festival d'Art d'Avant-Garde
+                        </h4>
+                        <p>
+                            Ce « journal » de quatre pages, imprimé par Combat et Presse de France réunis, à l’occasion du troisième<br>
+                            Festival d’Art d’avant-garde organisé par Jacques Polieri et Michel Ragon, est un pastiche du vrai Journal du dimanche.<br>
+                            Tout a été entièrement conçu par l’artiste : titres, caractères, mise en page. Le dimanche 27 novembre 1960,<br>
+                            Yves Klein fait distribuer dans les kiosques parisiens Le journal d'un seul jour.
+                        </p>
+                    </div>
+                </div>
+                <div class="c3imgbxR_M">
+                    <div class="c3imgR_M"></div>
                 </div>
             </div>
             <div class="more"><span><a href="crtist.html">view more</a></span></div>
@@ -146,9 +184,9 @@
                     <div class="snsWrap">
                         <div class="snsTit">FOLLOW US</div>
                         <div class="sns">
-                            <div class="insta"><a href="#">instagram</a></div>
-                            <div class="faceb"><a href="#">facebook</a></div>
-                            <div class="yutub"><a href="#">youtube</a></div>
+                            <div class="insta"><a href="#"><i><img src="images/insta.png" alt="인스타그램"></i></a></div>
+                            <div class="faceb"><a href="#"><i><img src="images/face.png" alt="페이스북"></i></a></div>
+                            <div class="yutub"><a href="#"><i><img src="images/you.png" alt="유튜브"></i></a></div>
                         </div>
                     </div>
                 </div>
