--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="exposition.html">EXPOSITIONS</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="exposition.html">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
@@ -177,7 +177,7 @@
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
                     <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
-                    <div class="menu menu4"><a href="#">EXPOSITIONS</a></div>
+                    <div class="menu menu4"><a href="exposition.html">EXPOSITIONS</a></div>
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
                 <div class="footRbx">
