--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -31,7 +31,7 @@
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
+                    <img src="images/mbt3.jpeg" alt="Yves Klein">
                 </div>
             </nav>
         </header>
