--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -72,35 +72,21 @@
                 </span>
         </main>
         <!------------------------------------ 모바일용 cont1 ------------------------------------>
-        <main class="cont cont1_M">
-            <div class="mainL">
-                <div class="mainImgL"></div>
-                <div class="mainT">
-                    <h3 class="mainTitL">Portrait d'Yves Klein</h3>
-                    <p class="mainTxtL">
-                        Portrait d'Yves Klein réalisé à<br>
-                        l'occasion du tournage de Peter Morley<br>
-                        "The Heartbeat of France"
-                    </p>
-                </div>
-                <div class="mainImg2"></div>
-            </div>
+        <main class="cont cont1 media">
             <div class="mainC">
                 <div class="mainImgC1">
                     <h3 class="mainTitC">Nu d'Iris Clert sortant de l'onde</h3>
                 </div>
-                <div class="mainImgC2"></div>
+                <div class="mainC2">
+                    <div class="mainImgC2"></div>
+                </div>
             </div>
-            <div class="mainR">
-                <div class="mainImgR"></div>
-                <div class="mainT">
-                    <h3 class="mainImgmainTitR">Yves Klein réalisant une Peinture de Feu</h3>
-                    <p class="mainTxtR">Peinture de Feu sans titre<br>
-                        Yves Klein's gesture evokes a man's<br>
-                        fantasy of controlling and mastering fire.</p>
-                    </div>
-                    <div class="mainImg2 R"></div>
+
+            <div class="mainL">
+                <div class="mainImg2"></div>
+                <div class="mainImg2 R"></div>
             </div>
+            
             <div class="more"><span><a href="brtist.html">view more</a></span></div>
                 <span class="down"><a href="#">
                     <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
