--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/artist.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="JS/main.js"></script>
 </head>
 <body>
