--- a/001.HTML/012.Blue_PJ/crtist.html
+++ b/001.HTML/012.Blue_PJ/crtist.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/crtist.css">
+    <link rel="stylesheet" href="css/media.css">
     
 </head>
 <body>
