--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -30,9 +30,9 @@
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
-                <div class="imgCont">
+                <!-- <div class="imgCont">
                     <img src="images/mbt3.jpeg" alt="Yves Klein">
-                </div>
+                </div> -->
             </nav>
         </header>
         <!------------------------------------------------- cont1 ------------------------------------------------->
