--- a/001.HTML/012.Blue_PJ/crtist.html
+++ b/001.HTML/012.Blue_PJ/crtist.html
@@ -152,7 +152,7 @@
             <div class="copy">
                 <ul>
                     <li>RETOUCHED PHOTOGRAPHS</li>
-                    <li>COPYRIGHT 2023-2024 AMERICAN VINTAGE</li>
+                    <li>COPYRIGHT 2023-2024 BOSEONG VINTAGE</li>
                     <li>ALL RIGHTS RESERVED</li>
                 </ul>
             </div>
