--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/artist.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/artmedia.css">
     <script src="JS/main.js"></script>
 </head>
 <body>
