--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/artist.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/artmedia.css">
-    <link rel="stylesheet" href="css/brtist.css">
+    <link rel="stylesheet" href="css/brtmedia.css">
     <script src="JS/main.js"></script>
 </head>
 <body>
