--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -89,7 +89,7 @@
             </section>
             <section class="bWrap">
                 <p>
-                    Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley "The Heartbeat of France"<br>
+                    Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley "The Heartbeat of France"
                     N.B. La photographie originale est en noir et blanc.
                 </p>
             </section>
