--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -73,7 +73,12 @@
             <div class="footInfo">
                 <div class="footLbx">
                     <ul>
-                        <li><span>LANGUAGE : </span><button type="button">FRANÇAIS</button></li>
+                        <li class="lang"><span>LANGUAGE : </span>
+                            <button type="button">FRANÇAIS</button>
+                            <ul>
+                                <li><a href="#">ENGLISH</a></li>
+                            </ul>
+                        </li>
                         <li>CREATED BY <i>BOSEONG KANG</i></li>
                         <li>CONTACT : 010-3362-1793</li>
                     </ul>
