--- a/001.HTML/012.Blue_PJ/exposition.html
+++ b/001.HTML/012.Blue_PJ/exposition.html
@@ -25,7 +25,7 @@
                     <li data-image="images/mli2.jpeg"><a href="#">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
-                    <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
+                    <li data-image="images/mli4.jpeg"><a href="index.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
                     <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
@@ -53,8 +53,8 @@
                     <div class="swiper-slide"><video class="Mvideo" src="./video/yves540.mp4" controls muted></video></div>
                 </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
             <div class="swiper-pagination"></div>
         </section>
 
