--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -213,7 +213,7 @@
                         <div class="sns">
                             <div class="insta"><a href="#"><i><img src="images/insta.png" alt="인스타그램"></i></a></div>
                             <div class="faceb"><a href="#"><i><img src="images/face.png" alt="페이스북"></i></a></div>
-                            <div class="yutub"><a href="#"><i><img src="images/you.png" alt="유튜브"></i></a></div>
+                            <div class="twt"><a href="#"><i><img src="images/x.png" alt="트위터"></i></a></div>
                         </div>
                     </div>
                 </div>
