--- a/index1.html
+++ b/index1.html
@@ -39,7 +39,7 @@
                 <a href="./001.HTML/012.Blue_PJ/intro.html" target="_blank">Yves Kline blue</a>
             </li>
             <li>
-                <a href="./001.HTML/013.ghibli_PJ/ocean.html" target="_blank">GHIBLI STUDIO</a>
+                <a href="./001.HTML/013.ghibli_PJ/index.html" target="_blank">GHIBLI STUDIO</a>
             </li>
         </ul>
     </h2>
