--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GHIBLI STUDIO</title>
     <link rel="shortcut icon" href="./img/main/gibrri.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
@@ -22,7 +23,7 @@
             <nav class="gnb1">
                 <button class="cbtn" onclick="sMenu()">×</button>
                 <ul>
-                    <li>
+                    <li class="menu1">
                         <a href="#pg">Main</a>
                         <!-- <ol class="smenu">
                             <li>
@@ -36,7 +37,7 @@
                             </li>
                         </ol> -->
                     </li>
-                    <li>
+                    <li class="menu2">
                         <a href="#pg1">Ocean Waves</a>
                         <!-- <ol class="smenu">
                             <li>
@@ -53,7 +54,7 @@
                             </li>
                         </ol> -->
                     </li>
-                    <li>
+                    <li class="menu3">
                         <a href="#pg2">Characters</a>
                         <!-- <ol class="smenu">
                             <li>
@@ -64,13 +65,14 @@
                             </li>
                         </ol> -->
                     </li>
-                    <li>
+                    <li class="menu4">
                         <a href="#pg3">Ending</a>
                     </li>
-                    <li><a href="#footer"><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></a></li>
+                    <li class="menu5"><a href="#footer"><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></a></li>
                 </ul>
             </nav>
         </div>
+
         <header class="top ibx">
             <div class="logo">
                 <a href="#">
@@ -96,7 +98,7 @@
                     <div id="wave-animation" class="wave-animation"></div>
                 </div>
                 <p class="audiotxt" onclick="toggleAudio()">BGM Play!</p>
-                <audio id="bgm" autoplay loop onloadstart="this.volume=0.3" src="./mp3/kiki.mp3">
+                <audio id="bgm" autoplay loop onloadstart="this.volume=.5" src="./mp3/kiki.mp3">
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.</audio>
             </div>
@@ -118,10 +120,6 @@
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
                                     laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
                                 </p>
                             </div>
                         </div>
@@ -136,10 +134,6 @@
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
                                     laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
                                 </p>
                             </div>
                         </div>
@@ -154,10 +148,6 @@
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
                                     laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
                                 </p>
                             </div>
                         </div>
