--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -68,7 +68,8 @@
                     <li class="menu4">
                         <a href="#pg3">Ending</a>
                     </li>
-                    <li class="menu5"><a href="#footer"><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></a></li>
+                    <li class="menu5"><a href="#footer"><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -98,7 +99,7 @@
                     <div id="wave-animation" class="wave-animation"></div>
                 </div>
                 <p class="audiotxt" onclick="toggleAudio()">BGM Play!</p>
-                <audio id="bgm" autoplay loop onloadstart="this.volume=.5" src="./mp3/kiki.mp3">
+                <audio id="bgm" loop onloadstart="this.volume=.5" src="./mp3/kiki.mp3">
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.</audio>
             </div>
@@ -113,9 +114,9 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m1"></div>
                         <div class="txtWrap">
-                            <div class="title" data-swiper-parallax="-300">Slide 1</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                            <div class="text" data-swiper-parallax="-100">
+                            <div class="title">Slide 1</div>
+                            <div class="subtitle">Subtitle</div>
+                            <div class="text">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
@@ -127,9 +128,9 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m2"></div>
                         <div class="txtWrap">
-                            <div class="title" data-swiper-parallax="-300">Slide 2</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                            <div class="text" data-swiper-parallax="-100">
+                            <div class="title">Slide 2</div>
+                            <div class="subtitle">Subtitle</div>
+                            <div class="text">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
@@ -141,9 +142,9 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m3"></div>
                         <div class="txtWrap">
-                            <div class="title" data-swiper-parallax="-300">Slide 3</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                            <div class="text" data-swiper-parallax="-100">
+                            <div class="title">Slide 3</div>
+                            <div class="subtitle">Subtitle</div>
+                            <div class="text">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
                                     dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
@@ -157,9 +158,15 @@
                 <div class="swiper-button-prev"></div> -->
                 <div class="swiper-pagination"></div>
             </div>
-
         </section>
-        <script src="./JS/main.js"></script>
+        <!-- /******************************************* cont2 *******************************************/ -->
+        <div id="cont">
+            <section id="pg1" class="cont2">
+
+            </section>
+        </div>
+    </div>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
