--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -77,7 +77,7 @@
         <header class="top ibx">
             <div class="logo">
                 <a href="#">
-                    <img class="log" src="./img/ocean/gibrri.png" alt="바다가들린다 로고">
+                    <img class="log" src="./img/main/gibrri.png" alt="바다가들린다 로고">
                 </a>
             </div>
             <div class="gnb2">
